--- a/styles/semanticolor.less
+++ b/styles/semanticolor.less
@@ -1,1 +1,5 @@
-@colorDiversity: 96;
+@colorDiversity: 320;
+@saturationLevelA1: 100%;
+@saturationLevelA2: 20%;
+@saturationLevelB1: 75%;
+@saturationLevelB2: 25%;
