--- a/styles/semanticolor.less
+++ b/styles/semanticolor.less
@@ -1,5 +1,4 @@
-@colorDiversity: 320;
-@saturationLevelA1: 100%;
-@saturationLevelA2: 10%;
-@saturationLevelB1: 75%;
-@saturationLevelB2: 75%;
+@colors: 360;
+@saturation: 90%;
+@luminosity: 50%;
+@fade: 50%;
